<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Proyecto Integrador</string>
    <string name="calculadora_de_conjuntos">Calculadora de Conjuntos</string>
    <string name="unir">Unir</string>
    <string name="simetrica">Simetrica</string>
    <string name="teoria_de_conjuntos">Teoria de Conjuntos</string>
    <string name="union">Union</string>
    <string name="interseccion">Interseccion</string>
    <string name="cR">...</string>
    <string name="diferencia">Diferencia</string>
    <string name="resultado">Resultado</string>
    <string name="conjunto_b">Conjunto B</string>
    <string name="conjunto_a">Conjunto A</string>
    <string name="limpiar">Limpiar</string>
    <string name="todo">TODO</string>
</resources>